package lab09.Ex2;

enum User { OWNER, COMPANY }
